production/infrastructure/network-policies/ingress.yml
#por padrao o cluster e default allow pra todo trafego.
#usando o network policiy convem entender bem o que esta fazendo, pois, ele se
#tornara default deny - impedindo as comunicacoes de todos os tipos, sendo
#necessario configura-las/definir os parametros corretamente.
#ISSO EXIGE BASTANTE CUIDADO!
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-network-policy
  namespace: nsse
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/26
      ports:
        - port: 30001
        - port: 30002
        - port: 30003
        - port: 30004
        - port: 30005
    - from:
        - podSelector:
            matchLabels:
              application: not-so-simple-ecommerce
      ports:
        - port: 4443
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 4443
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
      ports:
        - port: 4443
